force-app/main/default/objects/Project__c/fields/ActualRevenue__c.field-meta.xml
<CustomField>
    <fullName>ActualRevenue__c</fullName>
    <label>Actual Revenue</label>
    <summarizedField>RevenueManagement__c.TotalAmounts__c</summarizedField>
    <summaryForeignKey>RevenueManagement__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>