force-app/main/default/objects/Project__c/fields/AddressENG__c.field-meta.xml
<CustomField>
    <fullName>AddressENG__c</fullName>
    <description>ที่อยู่ภาษาอังกฤษ</description>
    <label>Address ENG</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>