force-app/main/default/objects/Project__c/fields/AddressTH__c.field-meta.xml
<CustomField>
    <fullName>AddressTH__c</fullName>
    <description>ที่อยู่ภาษาไทย</description>
    <label>Address TH</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>