force-app/main/default/objects/Project__c/fields/AreainNgan__c.field-meta.xml
<CustomField>
    <fullName>AreainNgan__c</fullName>
    <description>พื้นที่ในหน่วยของงาน</description>
    <label>Area in Ngan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>