force-app/main/default/objects/Project__c/fields/AreainRai__c.field-meta.xml
<CustomField>
    <fullName>AreainRai__c</fullName>
    <description>พื้นที่ในหน่วยของไร่</description>
    <label>Area in Rai</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>