force-app/main/default/objects/Project__c/fields/AreainWa__c.field-meta.xml
<CustomField>
    <fullName>AreainWa__c</fullName>
    <description>พื้นที่ในหน่วยของวา</description>
    <label>Area in Wa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>