force-app/main/default/objects/Project__c/fields/AreaValueSqm__c.field-meta.xml
<CustomField>
    <fullName>AreaValueSqm__c</fullName>
    <description>ราคาพื้นที่ต่อตารางเมตร</description>
    <label>Area Value / Sq.m.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>