force-app/main/default/objects/Project__c/fields/BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumber__c</fullName>
    <formula>IF(
    ISPICKVAL( CompanyBankName__c , &quot;Bangkok Bank&quot;),
    &quot;123-456-7890&quot;,  /* เลขที่บัญชีของ Bangkok Bank */
    IF(
        ISPICKVAL(CompanyBankName__c , &quot;Bank of Ayudhya&quot;),
        &quot;987-654-3210&quot;,  /* เลขที่บัญชีของ Bank of Ayudhya */
    IF(
        ISPICKVAL(CompanyBankName__c , &quot;Kasikorn Bank&quot;),
        &quot;987-654-3210&quot;,  /* เลขที่บัญชีของ Kasikorn Bank */
    IF(
        ISPICKVAL(CompanyBankName__c , &quot;Krungthai Bank&quot;),
        &quot;987-654-3210&quot;,  /* เลขที่บัญชีของ Krungthai Bank */
        IF(
            ISPICKVAL(CompanyBankName__c , &quot;Siam Commercial Bank&quot;),
            &quot;555-444-3330&quot;,  /* เลขที่บัญชีของ Siam Commercial Bank */
            &quot;Please specify Company Bank Name&quot;
        )
    )
)))</formula>
    <label>Bank Account Number for Invoice</label>
    <type>Text</type>
</CustomField>