force-app/main/default/objects/Project__c/fields/BankAccountNumberForInvoice__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumberForInvoice__c</fullName>
    <formula>CompanyAccountNameForInvoice__r.BankAccountNumber__c</formula>
    <label>Bank Account Number for Invoice</label>
    <type>Text</type>
</CustomField>