force-app/main/default/objects/Project__c/fields/BankAddressForInvoice__c.field-meta.xml
<CustomField>
    <fullName>BankAddressForInvoice__c</fullName>
    <formula>CompanyAccountNameForInvoice__r.BankAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Address for Invoice</label>
    <type>Text</type>
</CustomField>