force-app/main/default/objects/Project__c/fields/BankBranch__c.field-meta.xml
<CustomField>
    <fullName>BankBranch__c</fullName>
    <label>Bank Branch for Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>