force-app/main/default/objects/Project__c/fields/BankBranchForInvoice__c.field-meta.xml
<CustomField>
    <fullName>BankBranchForInvoice__c</fullName>
    <formula>CompanyAccountNameForInvoice__r.BankBranch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Branch for Invoice</label>
    <type>Text</type>
</CustomField>