force-app/main/default/objects/Project__c/fields/BuildingPermits__c.field-meta.xml
<CustomField>
    <fullName>BuildingPermits__c</fullName>
    <description>An official approvals from local government authorities that allow construction, renovation, or significant alterations to buildings.</description>
    <label>Building Permits</label>
    <type>Date</type>
</CustomField>