force-app/main/default/objects/Project__c/fields/CAMFeeTHBSqm__c.field-meta.xml
<CustomField>
    <fullName>CAMFeeTHBSqm__c</fullName>
    <label>CAM Fee (THB/Sq.m.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>