force-app/main/default/objects/Project__c/fields/CarParkPerSqm__c.field-meta.xml
<CustomField>
    <fullName>CarParkPerSqm__c</fullName>
    <label>Car Park (THB/Sq.m.)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>