force-app/main/default/objects/Project__c/fields/CompanyAccountName__c.field-meta.xml
<CustomField>
    <fullName>CompanyAccountName__c</fullName>
    <label>Company Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>