force-app/main/default/objects/Project__c/fields/CompanyAccountNameForInvoice__c.field-meta.xml
<CustomField>
    <fullName>CompanyAccountNameForInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Account Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Bank__c.Project__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Bank__c.IsDefault__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Project</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>