force-app/main/default/objects/Project__c/fields/CompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>CompanyAddress__c</fullName>
    <label>Company Address</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>