force-app/main/default/objects/Project__c/fields/CompanyBankName__c.field-meta.xml
<CustomField>
    <fullName>CompanyBankName__c</fullName>
    <label>Company Bank Name for Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bangkok Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Ayudhya</fullName>
            </value>
            <value>
                <fullName>Kasikorn Bank</fullName>
            </value>
            <value>
                <fullName>Krungthai Bank</fullName>
            </value>
            <value>
                <fullName>Siam Commercial Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>