force-app/main/default/objects/Project__c/fields/CompanyBankNameForInvoice__c.field-meta.xml
<CustomField>
    <fullName>CompanyBankNameForInvoice__c</fullName>
    <formula>IF(NOT(ISBLANK(CompanyAccountNameForInvoice__c)), 
    TEXT(CompanyAccountNameForInvoice__r.BankName__c), 
    &quot;No bank selected&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Bank Name for Invoice</label>
    <type>Text</type>
</CustomField>