force-app/main/default/objects/Project__c/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <description>รหัสบริษัทที่ต้อง</description>
    <label>Company Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CD</fullName>
                <default>true</default>
                <label>CD</label>
            </value>
            <value>
                <fullName>OTJ</fullName>
                <isActive>false</isActive>
                <label>OTJ</label>
            </value>
            <value>
                <fullName>S87</fullName>
                <isActive>false</isActive>
                <label>S87</label>
            </value>
            <value>
                <fullName>SAS</fullName>
                <isActive>false</isActive>
                <label>SAS</label>
            </value>
            <value>
                <fullName>SPK</fullName>
                <isActive>false</isActive>
                <label>SPK</label>
            </value>
            <value>
                <fullName>SQU</fullName>
                <isActive>false</isActive>
                <label>SQU</label>
            </value>
            <value>
                <fullName>SSV</fullName>
                <isActive>false</isActive>
                <label>SSV</label>
            </value>
            <value>
                <fullName>SSW</fullName>
                <isActive>false</isActive>
                <label>SSW</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>