force-app/main/default/objects/Project__c/fields/CompanyPhone__c.field-meta.xml
<CustomField>
    <fullName>CompanyPhone__c</fullName>
    <label>Company Phone</label>
    <type>Phone</type>
</CustomField>