force-app/main/default/objects/Project__c/fields/CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate__c</fullName>
    <description>Date on which Project is finished or completed.</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>