force-app/main/default/objects/Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>คำบรรยาย project</description>
    <label>Description</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>