force-app/main/default/objects/Project__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <label>Facilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24-Hour Security &amp; CCTV</fullName>
            </value>
            <value>
                <fullName>Concierge Service</fullName>
            </value>
            <value>
                <fullName>Co-Working Space</fullName>
            </value>
            <value>
                <fullName>Fitness Center/Gym</fullName>
            </value>
            <value>
                <fullName>Garden &amp; Green Spaces</fullName>
            </value>
            <value>
                <fullName>Pet-friendly Areas or Pet Services</fullName>
            </value>
            <value>
                <fullName>Playground</fullName>
            </value>
            <value>
                <fullName>Private Cinema/Theater Room</fullName>
            </value>
            <value>
                <fullName>Private Elevator Access</fullName>
            </value>
            <value>
                <fullName>Private Lounge or Clubhouse</fullName>
            </value>
            <value>
                <fullName>Spa &amp; Sauna</fullName>
            </value>
            <value>
                <fullName>Swimming Pool</fullName>
            </value>
            <value>
                <fullName>Tennis Courts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>