force-app/main/default/objects/Project__c/fields/FinalAssigneeName__c.field-meta.xml
<CustomField>
    <fullName>FinalAssigneeName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Assignee Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>