force-app/main/default/objects/Project__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Floor</label>
    <referenceTo>Floor__c</referenceTo>
    <relationshipLabel>Project</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>