force-app/main/default/objects/Project__c/fields/LandArea__c.field-meta.xml
<CustomField>
    <fullName>LandArea__c</fullName>
    <description>Input the area in the format Rai-Ngan-Wa.</description>
    <label>Land Area (Rai-Ngan-Wa)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>