force-app/main/default/objects/Project__c/fields/NumberofParkingLots__c.field-meta.xml
<CustomField>
    <fullName>NumberofParkingLots__c</fullName>
    <description>จำนวนของที่จอดรถ</description>
    <label>Number of Parking Lots</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>