force-app/main/default/objects/Project__c/fields/OwnershipType__c.field-meta.xml
<CustomField>
    <fullName>OwnershipType__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freehold</fullName>
            </value>
            <value>
                <fullName>Leasehold</fullName>
            </value>
            <value>
                <fullName>C</fullName>
                <isActive>false</isActive>
                <label>C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>