force-app/main/default/objects/Project__c/fields/ParkingLevel__c.field-meta.xml
<CustomField>
    <fullName>ParkingLevel__c</fullName>
    <description>Describe the floors dedicated to parking in a building.</description>
    <label>Parking Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>