force-app/main/default/objects/Project__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <description>รหัสไปรษณีย์ ดึงมาจากเขต</description>
    <formula>District__r.Postcode__c</formula>
    <label>Postcode</label>
    <type>Text</type>
</CustomField>