force-app/main/default/objects/Project__c/fields/ProjectAbbreviated__c.field-meta.xml
<CustomField>
    <fullName>ProjectAbbreviated__c</fullName>
    <label>Project Abbreviated</label>
    <length>3</length>
    <type>Text</type>
</CustomField>