force-app/main/default/objects/Project__c/fields/ProjectAddressEN__c.field-meta.xml
<CustomField>
    <fullName>ProjectAddressEN__c</fullName>
    <description>ที่อยู่ภาษาอังกฤษ</description>
    <label>Project Address (EN)</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>