force-app/main/default/objects/Project__c/fields/ProjectAddressTH__c.field-meta.xml
<CustomField>
    <fullName>ProjectAddressTH__c</fullName>
    <description>ที่อยู่ภาษาไทย</description>
    <label>Project Address (TH)</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>