force-app/main/default/objects/Project__c/fields/ProjectCode__c.field-meta.xml
<CustomField>
    <fullName>ProjectCode__c</fullName>
    <description>รหัส Project</description>
    <externalId>true</externalId>
    <label>Project Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>