force-app/main/default/objects/Project__c/fields/ProjectLogo__c.field-meta.xml
<CustomField>
    <fullName>ProjectLogo__c</fullName>
    <label>Project Logo</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>