force-app/main/default/objects/Project__c/fields/ProjectNameEN__c.field-meta.xml
<CustomField>
    <fullName>ProjectNameEN__c</fullName>
    <description>ชื่อ Project ภาษาอังกฤษ</description>
    <label>Project Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>