force-app/main/default/objects/Project__c/fields/ProjectNameTH__c.field-meta.xml
<CustomField>
    <fullName>ProjectNameTH__c</fullName>
    <description>ชื่อ Project ภาษาไทย</description>
    <label>Project Name TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>