force-app/main/default/objects/Project__c/fields/ProjectTeamMemberNo__c.field-meta.xml
<CustomField>
    <fullName>ProjectTeamMemberNo__c</fullName>
    <label>ProjectTeamMemberNo.</label>
    <summaryForeignKey>ProjectTeamMember__c.ProjectCode__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>