force-app/main/default/objects/Project__c/fields/ProjectValueTHB__c.field-meta.xml
<CustomField>
    <fullName>ProjectValueTHB__c</fullName>
    <label>Project Value (THB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>