force-app/main/default/objects/Project__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ึRelationship กับ จังหวัด</description>
    <label>Province</label>
    <referenceTo>Province__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>