force-app/main/default/objects/Project__c/fields/QuotaForeigner__c.field-meta.xml
<CustomField>
    <fullName>QuotaForeigner__c</fullName>
    <description>จำนวนห้องสูงสุดที่คนต่างชาติสามารถซื้อได้ใน project นี้</description>
    <label>Quota Foreigner</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>