force-app/main/default/objects/Project__c/fields/SinkingFundTHBSqm__c.field-meta.xml
<CustomField>
    <fullName>SinkingFundTHBSqm__c</fullName>
    <label>Sinking Fund (THB/Sq.m.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>