force-app/main/default/objects/Project__c/fields/SWIFTCodeForInvoice__c.field-meta.xml
<CustomField>
    <fullName>SWIFTCodeForInvoice__c</fullName>
    <formula>CompanyAccountNameForInvoice__r.SWIFTCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SWIFT Code for Invoice</label>
    <type>Text</type>
</CustomField>