force-app/main/default/objects/Project__c/fields/TargetRevenue__c.field-meta.xml
<CustomField>
    <fullName>TargetRevenue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>รายได้เป้าหมายจาก Project นี้</description>
    <label>Target Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>