force-app/main/default/objects/Project__c/fields/TotalCarParkingLots__c.field-meta.xml
<CustomField>
    <fullName>TotalCarParkingLots__c</fullName>
    <description>จำนวนของที่จอดรถ</description>
    <label>Total Car Parking (Lots)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>