force-app/main/default/objects/Project__c/fields/TotalExpectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>TotalExpectedRevenue__c</fullName>
    <label>Total Expected Revenue</label>
    <summarizedField>RevenueManagement__c.Target__c</summarizedField>
    <summaryForeignKey>RevenueManagement__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>