force-app/main/default/objects/Project__c/fields/TotalFloor__c.field-meta.xml
<CustomField>
    <fullName>TotalFloor__c</fullName>
    <label>Total Floor(s)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>