force-app/main/default/objects/Project__c/fields/TotalForeignQuotaSqm__c.field-meta.xml
<CustomField>
    <fullName>TotalForeignQuotaSqm__c</fullName>
    <label>Total Foreign Quota (Sq.m.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>