force-app/main/default/objects/Project__c/fields/TotalSalesAreaSqm__c.field-meta.xml
<CustomField>
    <fullName>TotalSalesAreaSqm__c</fullName>
    <label>Total Sales Area (Sq.m.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>