force-app/main/default/objects/Project__c/fields/TotalUnits__c.field-meta.xml
<CustomField>
    <fullName>TotalUnits__c</fullName>
    <label>Total Unit(s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>