force-app/main/default/objects/Project__c/validationRules/BuildingPermitCompletionDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BuildingPermitCompletionDateValidation</fullName>
    <active>true</active>
    <description>the Building Permit Date cannot be later than the Completion Date</description>
    <errorConditionFormula>BuildingPermits__c &gt;  CompletionDate__c</errorConditionFormula>
    <errorMessage>Building Permit Date cannot be later than Completion Date.</errorMessage>
</ValidationRule>