force-app/main/default/objects/Project__c/validationRules/CompletionDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CompletionDateValidation</fullName>
    <active>true</active>
    <description>the Completion Date cannot be earlier than today&apos;s date</description>
    <errorConditionFormula>CompletionDate__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Completion Date cannot be earlier than today.</errorMessage>
</ValidationRule>