force-app/main/default/objects/Project__c/validationRules/RequireBankDetails.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireBankDetails</fullName>
    <active>false</active>
    <description>To ensure that users provide the Bank details when Bank Name is not blank.</description>
    <errorConditionFormula>AND (  NOT(ISPICKVAL( CompanyBankName__c  , &quot;&quot;)),
       OR(
          ISBLANK( BankAddress__c ),
          ISBLANK( SWIFTCode__c ),
          ISBLANK( BankBranch__c ),
          ISBLANK( CompanyAccountName__c )
        )
)</errorConditionFormula>
    <errorMessage>Please provide the Bank Information.</errorMessage>
</ValidationRule>