force-app/main/default/objects/Project__c/validationRules/StartDateCompletionDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateCompletionDateValidation</fullName>
    <active>true</active>
    <description>the Project Start Date cannot be later than the Completion Date</description>
    <errorConditionFormula>ProjectStartDate__c &gt;  CompletionDate__c</errorConditionFormula>
    <errorMessage>Project Start Date cannot be later than Completion Date.</errorMessage>
</ValidationRule>