force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProjectNameTH__c</columns>
    <columns>ProjectAbbreviated__c</columns>
    <columns>Project_Status__c</columns>
    <columns>ProjectType__c</columns>
    <columns>OwnershipType__c</columns>
    <columns>ProjectStartDate__c</columns>
    <columns>CompletionDate__c</columns>
    <columns>TargetRevenue__c</columns>
    <columns>ActualRevenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>